--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "express-validator": "^7.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
