--- a/Frontend-pwa/.env
+++ b/Frontend-pwa/.env
@@ -1,4 +1,5 @@
 VITE_API_BASE_URL=http://localhost:4000
+VITE_ADD_QUESTIONS=http://localhost:4000/teacher/api/addQuestions
 
 # Server Configuration
 PORT=4000
