--- a/Frontend-pwa/.env
+++ b/Frontend-pwa/.env
@@ -1,5 +1,6 @@
 VITE_API_BASE_URL=http://localhost:4000
 VITE_ADD_QUESTIONS=http://localhost:4000/teacher/api/addQuestions
+VITE_GET_QUESTIONS=http://localhost:4000/user/api/getQuestions
 
 # Server Configuration
 PORT=4000
