questions submission and the reflecting in backend is done

--- a/Frontend-pwa/.env
+++ b/Frontend-pwa/.env
@@ -1,6 +1,8 @@
 VITE_API_BASE_URL=http://localhost:4000
 VITE_ADD_QUESTIONS=http://localhost:4000/teacher/api/addQuestions
 VITE_GET_QUESTIONS=http://localhost:4000/user/api/getQuestions
+VITE_USER_UPDATE_URL=http://localhost:4000/user/api/update
+VITE_USER_PROFILE_URL=http://localhost:4000/user/api/profile
 
 # Server Configuration
 PORT=4000
