reaction game is done

--- a/Frontend-pwa/package.json
+++ b/Frontend-pwa/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "dexie": "^4.2.0",
     "dexie-react-hooks": "^4.2.0",
+    "phaser": "^3.90.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.9.1",
