--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "nodemon --watch src --ext ts,js --exec \"ts-node\" src/server.ts"
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src --ext ts,js --exec \"ts-node\" src/server.ts",
+    "vercel-build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +41,7 @@
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "@vercel/node": "^2.3.0",
     "eslint": "^8.54.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.1",
